--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <meta name='robots' content='noindex, nofollow' />
   	<title>Invitación</title>
   </head>
   <body>
-    <h1>Nos casamos en León</h1>
+    <h1>Silvia & Roberto</h1>
+    <h2>Nos casamos en León</h2>
+    <h3>22 de agosto, 2026, 13:00</h3>
   </body>
 </html>
