--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>Silvia & Roberto</h1>
     <h2>Nos casamos en León</h2>
     <h3>22 de agosto, 2026, 13:00</h3>
+    <svg width="100" height="100">
+  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+</svg>
+
   </body>
 </html>
