--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   	<title>Invitación</title>
   </head>
   <body>
+    <nav>
+  <ul>
+    <li><a href="/">Bienvenidos</a></li>
+    <li><a href="/">Evento</a></li>
+    <li><a href="/">Confirmación asistencia</a></li>
+  </ul>
+</nav>
+
     <h1>Silvia & Roberto</h1>
     <h2>Nos casamos en León</h2>
     <h3>22 de agosto, 2026, 13:00</h3>
-    <svg width="100" height="100">
-  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
-</svg>
 
   </body>
 </html>
